--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
     "date-fns": "^2.30.0",
+    "@supabase/supabase-js": "^2.39.0",
     "lucide-react": "^0.294.0"
   },
   "devDependencies": {
